--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: Georgia, "Times New Roman", serif;
   margin: 0;
   background-color: #f5f5f5;
+  text-align: center;
 }
 
 .navbar {
@@ -17,6 +18,7 @@ body {
 .brand {
   color: white;
   font-size: 20px;
+  font-family:Impact;
 }
 
 .links a {
@@ -44,4 +46,105 @@ body {
   padding: 30px;
   text-align: center;
 }
+header {
+  background-color: #f5f5f5;
+  color: rgb(0, 0, 0);
+  padding: 40px 20px;
+}
 
+header h1 {
+  margin: 0;
+  font-size: 36px;
+}
+
+header p {
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+.cta-button {
+  display: inline-block;
+  margin: 20px 0;
+  padding: 12px 30px;
+  background-color: #000000;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 8px;
+  transition: background-color 0.3s;
+}
+
+.cta-button:hover {
+  background-color: #f3c7b8;
+}
+
+.carousel {
+  position: relative;
+  width: 90%;
+  max-width: 800px;
+  margin: 40px auto;
+  overflow: hidden;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+
+.carousel-images {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-images img {
+  width: 100%;                 
+  height: 100%;                
+  flex-shrink: 0;
+  border-radius: 10px;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0,0,0,0.5);
+  color: white;
+  border: none;
+  font-size: 30px;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+.prev { left: 10px; }
+.next { right: 10px; }
+.card-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.card {
+  background-color: #fbe9e7;
+  padding: 20px;
+  border-radius: 15px;
+  width: 250px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease;
+  text-align: center;
+}
+.card img{
+  border-radius: 25px!important;
+  width: 250px;    
+  height: auto;
+  object-fit: cover;
+  margin: 10px 0;
+}
+.card, .card * {
+  font-family: Georgia, serif !important;
+}
