--- a/style.css
+++ b/style.css
@@ -77,32 +77,6 @@ header p {
 .cta-button:hover {
   background-color: #f3c7b8;
 }
-
-.carousel {
-  position: relative;
-  width: 90%;
-  max-width: 800px;
-  margin: 40px auto;
-  overflow: hidden;
-  border-radius: 15px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-}
-
-.carousel-images {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-}
-
-.carousel-images img {
-  width: 100%;                 
-  height: 100%;                
-  flex-shrink: 0;
-  border-radius: 10px;
-  object-fit: cover;
-  margin: 0 auto;
-}
-
-
 .prev, .next {
   position: absolute;
   top: 50%;
@@ -147,4 +121,43 @@ header p {
 }
 .card, .card * {
   font-family: Georgia, serif !important;
+}
+.acasa {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 50px;
+}
+
+/* imaginea stilizată în stânga */
+.poza-acasa {
+  width: 350px;
+  border-radius: 25px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  margin-right: 300px;
+  margin-left: 30px;
+  transition: transform 0.3s ease;
+}
+
+.poza-acasa:hover {
+  transform: scale(1.05);
+}
+
+/* textul din dreapta */
+.text-acasa {
+  max-width: 500px;
+}
+
+.text-acasa h1 {
+  color: #5a3e36;
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+.text-acasa p {
+  color: #7a5c4b;
+  font-size: 1.2em;
+}
+.colectia-toamna {
+  display: none;
 }
