--- a/style.css
+++ b/style.css
@@ -237,3 +237,60 @@ header p {
 .contacte-form button:hover {
   background-color: #bf6540;
 }
+:root {
+  --bg-color: #f5f5f5;
+  --text-color: #000;
+  --nav-color: #8f8f8f;
+  --card-color: #fbe9e7;
+}
+
+body.dark-theme {
+  --bg-color: #1f1f1f;
+  --text-color: #f1f1f1;
+  --nav-color: #3b3b3b;
+  --card-color: #2e2e2e;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background 0.3s ease, color 0.3s ease;
+}
+
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--nav-color);
+  padding: 0 18px;
+  height: 64px;
+}
+
+.nav-left {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+
+#theme-toggle {
+  border: none;
+  background: transparent;
+  color: white;
+  font-size: 22px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+#theme-toggle:hover {
+  transform: scale(1.2);
+}
+
+
+.card {
+  background-color: var(--card-color);
+  color: var(--text-color);
+  transition: background 0.3s ease, color 0.3s ease;
+}
+
