Am adaugat pozele din pagina Produse in json

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ header p {
   justify-content: flex-start;
   padding: 50px;
 }
-.poza-acasa {
+.acasa-images {
   width: 350px;
   border-radius: 25px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
